# flatline_lsp

./: CMakeLists.txt  LICENSE.txt  README.md  flatline_lsp.py  flatline_server.cpp  infer.cpp  install.sh  make_dummy_tokenizer.py  prepare_codegen25_model.sh
.github/workflows/: build.yaml
tests/: test_language_model_for_completion.py  test_lsp.py
